--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -13,7 +13,7 @@
 
 	<artifactId>sms-gateway-service</artifactId>
 	<name>sms-gateway-service</name>
-	
+
 	<dependencies>
 
 		<dependency>
@@ -73,6 +73,23 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>${netty4.version}</version>
+		</dependency>
+
+		<!-- logger -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 	</dependencies>
 
