:blush: update maven structure

--- a/sms-gateway-service/src/main/resources/profile/prod/dubbo-prod.properties
+++ b/sms-gateway-service/src/main/resources/profile/prod/dubbo-prod.properties
@@ -1,10 +1,5 @@
-dubbo.server.name=auction-core
+dubbo.server.name=sms-gateway-service
 dubbo.server.port=27020
 dubbo.provider.timeout=80000
-dubbo.registry.address=172.16.102.13:2181,172.16.102.14:2181,172.16.102.15:2181
-
-server.version=1.0.0
-
-
-## order-workflow-dubbo-service
-order.dubbo.service.version=1.0.0
+dubbo.registry.address=127.0.0.1:2181,127.0.0.1:2181
+dubbo.server.version=1.0.0
