--- a/sms-gateway-service/src/main/resources/profile/dev/dubbo-dev.properties
+++ b/sms-gateway-service/src/main/resources/profile/dev/dubbo-dev.properties
@@ -1,6 +1,5 @@
-dubbo.server.name=dubbo-core-service
+dubbo.server.name=sms-gateway-service
 dubbo.server.port=27020
 dubbo.provider.timeout=80000
 dubbo.registry.address=127.0.0.1:2181
-
 dubbo.server.version=1.0.0
