--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.github.pleuvoir</groupId>
-	<artifactId>sms-gateway-parent</artifactId>
+	<artifactId>sms-gateway-provider</artifactId>
 	<version>20181011</version>
 	<packaging>pom</packaging>
 
@@ -12,48 +12,23 @@
 	<description>The parent project of sms-gateway</description>
 
 	<modules>
+		<module>bom</module>
 		<module>sms-gateway-api</module>
 		<module>sms-gateway-service</module>
 	</modules>
 
 	<properties>
-		<!-- Test libs -->
-		<junit.version>4.12</junit.version>
 		<jdk.version>1.8</jdk.version>
-		<!-- Build args -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- thirdParty libs -->
-		<lang3.version>3.7</lang3.version>
-		<fastjson.version>1.2.49</fastjson.version>
-		<commons-io.version>2.6</commons-io.version>
-		<dubbo.version>2.6.2</dubbo.version>
-		<zookeeper.version>3.4.11</zookeeper.version>
-		<zkclient.version>0.10</zkclient.version>
-		<curator-framework.version>2.12.0</curator-framework.version>
-		<javassist.version>3.22.0-GA</javassist.version>
-		<netty3.version>3.10.6.Final</netty3.version>
-		<netty4.version>4.1.28.Final</netty4.version>
-		<slf4j.version>1.7.25</slf4j.version>
-		<logback.version>1.2.3</logback.version>
+		<sms.gateway.version>20181011</sms.gateway.version>
 	</properties>
-
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+			<version>4.12</version>
 		</dependency>
 	</dependencies>
 
@@ -71,100 +46,8 @@
 				<artifactId>sms-gateway-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<!-- logger -->
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-core</artifactId>
-				<version>${logback.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>${logback.version}</version>
-			</dependency>
-			<!-- dubbo and zk -->
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>dubbo</artifactId>
-				<version>${dubbo.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.jboss.netty</groupId>
-						<artifactId>netty</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.javassist</groupId>
-				<artifactId>javassist</artifactId>
-				<version>${javassist.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.101tec</groupId>
-				<artifactId>zkclient</artifactId>
-				<version>${zkclient.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.zookeeper</groupId>
-				<artifactId>zookeeper</artifactId>
-				<version>${zookeeper.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-log4j12</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.curator</groupId>
-				<artifactId>curator-framework</artifactId>
-				<version>${curator-framework.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.netty</groupId>
-				<artifactId>netty</artifactId>
-				<version>${netty3.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.netty</groupId>
-				<artifactId>netty-all</artifactId>
-				<version>${netty4.version}</version>
-			</dependency>
-			<!-- common -->
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${lang3.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>fastjson</artifactId>
-				<version>${fastjson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons-io.version}</version>
-			</dependency>
-			<!-- test -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 
 	<build>
 		<resources>
@@ -211,7 +94,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- 打包的时候跳过单元测试 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
