--- a/sms-gateway-api/pom.xml
+++ b/sms-gateway-api/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>io.github.pleuvoir</groupId>
-		<artifactId>sms-gateway-parent</artifactId>
+		<artifactId>sms-gateway-provider</artifactId>
 		<version>20181011</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -14,6 +14,15 @@
 	<artifactId>sms-gateway-api</artifactId>
 	<name>sms-gateway-api</name>
 
+
+	<dependencies>
+		<dependency>
+			<groupId>io.github.pleuvoir</groupId>
+			<artifactId>common-bom</artifactId>
+			<type>pom</type>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 
 
 </project>
