--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -6,63 +6,38 @@
 
 	<parent>
 		<groupId>io.github.pleuvoir</groupId>
-		<artifactId>sms-gateway-parent</artifactId>
+		<artifactId>sms-gateway-provider</artifactId>
 		<version>20181011</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>sms-gateway-service</artifactId>
 	<name>sms-gateway-service</name>
 
-	<dependencies>
 
+	<dependencies>
 		<dependency>
 			<groupId>io.github.pleuvoir</groupId>
 			<artifactId>sms-gateway-api</artifactId>
 		</dependency>
 
-		<!-- dubbo and zk -->
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>dubbo</artifactId>
+			<groupId>io.github.pleuvoir</groupId>
+			<artifactId>sl4j-logback-bom</artifactId>
+			<type>pom</type>
+			<optional>true</optional>
+			<version>${project.version}</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.101tec</groupId>
-			<artifactId>zkclient</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.zookeeper</groupId>
-			<artifactId>zookeeper</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.curator</groupId>
-			<artifactId>curator-framework</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-		</dependency>
-		<!-- logger -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
+			<groupId>io.github.pleuvoir</groupId>
+			<artifactId>dubbo-zookeeper-bom</artifactId>
+			<type>pom</type>
+			<optional>true</optional>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
