--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -40,6 +40,8 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.3</logback.version>
 		<spring.version>5.0.8.RELEASE</spring.version>
+		<spring.data.redis>1.8.4.RELEASE</spring.data.redis>
+		<jedis.version>2.9.0</jedis.version>
 		<aspectj.version>1.8.13</aspectj.version>
 		<fileupload.version>1.3.3</fileupload.version>
 		<validator.version>6.0.5.Final</validator.version>
@@ -148,6 +150,17 @@
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
 				<version>${aspectj.version}</version>
+			</dependency>
+			<!-- spring redis support -->
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-redis</artifactId>
+				<version>${spring.data.redis}</version>
+			</dependency>
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis.version}</version>
 			</dependency>
 			<!-- common -->
 			<dependency>
