--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
 	<modules>
 		<module>bom</module>
+		<module>plugin-support</module>
 		<module>sms-gateway-api</module>
 		<module>sms-gateway-service</module>
 		<module>sms-gateway-web</module>
