:blush: update project pom

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -15,7 +15,7 @@
 
 	<modules>
 		<module>common-bom</module>
-		<module>redis-bom</module>
+		<module>spring-redis-bom</module>
 		<module>dubbo-zookeeper-bom</module>
 		<module>sl4j-logback-bom</module>
 		<module>spring-mvc-bom</module>
