--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -26,10 +26,16 @@
 			<artifactId>redis-plugin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.github.pleuvoir</groupId>
+			<artifactId>dubbo-tracefilter-plugin</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.github.pleuvoir</groupId>
-			<artifactId>sl4j-logback-bom</artifactId>
+			<artifactId>slf4j-logback-bom</artifactId>
 			<type>pom</type>
 			<optional>true</optional>
 			<version>${project.version}</version>
@@ -65,6 +71,8 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
+		<finalName>sms-gateway-service</finalName>  
 	</build>
-
+	
 </project>
