修改项目引用

--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,13 @@
 
 	<groupId>io.github.pleuvoir</groupId>
 	<artifactId>sms-gateway-provider</artifactId>
-	<version>20181011</version>
+	<version>1.0.2</version>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
 	<description>The parent project of sms-gateway</description>
 
 	<modules>
-		<module>bom</module>
-		<module>plugin-support</module>
 		<module>sms-gateway-api</module>
 		<module>sms-gateway-service</module>
 		<module>sms-gateway-web</module>
