--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.github.pleuvoir</groupId>
 		<artifactId>sms-gateway-provider</artifactId>
-		<version>20181011</version>
+		<version>1.0.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
