增加脚本，升级redis

--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>io.github.pleuvoir</groupId>
 			<artifactId>redis-plugin</artifactId>
-			<version>${project.version}</version>
+			<version>1.0.3</version>
 		</dependency>
 
 		<dependency>
