--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.github.pleuvoir</groupId>
 		<artifactId>sms-gateway-provider</artifactId>
-		<version>1.0.2</version>
+		<version>1.0.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -52,7 +52,7 @@
 			<artifactId>slf4j-logback-bom</artifactId>
 			<type>pom</type>
 			<optional>true</optional>
-			<version>${project.version}</version>
+			<version>${my.bom.version}</version>
 		</dependency>
 
 		<dependency>
@@ -60,7 +60,7 @@
 			<artifactId>dubbo-zookeeper-bom</artifactId>
 			<type>pom</type>
 			<optional>true</optional>
-			<version>${project.version}</version>
+			<version>${my.bom.version}</version>
 		</dependency>
 
 		<!-- test -->
