--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.github.pleuvoir</groupId>
-	<artifactId>sms-gateway-provider</artifactId>
+	<artifactId>sms-gateway-parent</artifactId>
 	<version>1.0.3</version>
 	<packaging>pom</packaging>
 
@@ -15,6 +15,7 @@
 		<module>sms-gateway-api</module>
 		<module>sms-gateway-service</module>
 		<module>sms-gateway-web</module>
+		<module>sms-migration</module>
 	</modules>
 
 	<properties>
