--- a/sms-gateway-api/pom.xml
+++ b/sms-gateway-api/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>io.github.pleuvoir</groupId>
-		<artifactId>sms-gateway-provider</artifactId>
+		<artifactId>sms-gateway-parent</artifactId>
 		<version>1.0.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
