--- a/sms-migration/pom.xml
+++ b/sms-migration/pom.xml
@@ -1,10 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.pleuvoir</groupId>
+	<parent>
+		<groupId>io.github.pleuvoir</groupId>
+		<artifactId>sms-gateway-parent</artifactId>
+		<version>1.0.3</version>
+	</parent>
+
 	<artifactId>sms-migration</artifactId>
 	<version>20181011</version>
-
 
 	<properties>
 		<flyway.version>4.1.2</flyway.version>
