--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<my.bom.version>1.1.0</my.bom.version>
+		<lang3.version>3.7</lang3.version>
+		<fastjson.version>1.2.49</fastjson.version>
+		<fileupload.version>1.3.3</fileupload.version>
+		<commons-io.version>2.6</commons-io.version>
+		<hibernate.validator>5.4.1.Final</hibernate.validator>
+		<javax.el.version>2.2.4</javax.el.version>
 	</properties>
 
 
