--- a/sms-gateway-api/pom.xml
+++ b/sms-gateway-api/pom.xml
@@ -14,7 +14,17 @@
 	<artifactId>sms-gateway-api</artifactId>
 	<name>sms-gateway-api</name>
 
+	<properties>
+		<lombok.version>1.18.2</lombok.version>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
