--- a/sms-gateway-service/src/main/resources/config/profiles/dev/database-dev.properties
+++ b/sms-gateway-service/src/main/resources/config/profiles/dev/database-dev.properties
@@ -1,7 +1,7 @@
-db.driver=oracle.jdbc.OracleDriver
-db.url=jdbc:oracle:thin:@192.168.100.8:1521:cacplat
-db.user=auction_test
-db.password=auction_test
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+db.user=root
+db.password=root
 db.init.size=1
 db.max.active=5
 db.min.idle=2
