--- a/sms-migration/pom.xml
+++ b/sms-migration/pom.xml
@@ -40,11 +40,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>${ojdbc.version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
