--- a/sms-migration/src/main/resources/config/dev/config-dev.properties
+++ b/sms-migration/src/main/resources/config/dev/config-dev.properties
@@ -6,4 +6,4 @@ flyway.sql.migration.separator=__
 flyway.sql.migration.suffix=.sql
 flyway.table=PRV_SCHEMA_VERSION
 
-sql.location=classpath:sql/manage
+sql.location=classpath:sql/sms
