:blush: 修改日志及jiguang 实现

--- a/sms-gateway-service/src/main/resources/config/profiles/dev/database-dev.properties
+++ b/sms-gateway-service/src/main/resources/config/profiles/dev/database-dev.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+db.url=jdbc:mysql://localhost:3306/sms?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 db.user=root
 db.password=root
 db.init.size=1
