--- a/sms-migration/src/main/resources/config/dev/database-dev.properties
+++ b/sms-migration/src/main/resources/config/dev/database-dev.properties
@@ -1,4 +1,4 @@
-db.driver=oracle.jdbc.OracleDriver
-db.url=jdbc:oracle:thin:@192.168.100.211:1521:orcl
-db.user=sms
-db.password=sms
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/sms?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+db.user=root
+db.password=root
