--- a/sms-gateway-service/pom.xml
+++ b/sms-gateway-service/pom.xml
@@ -21,7 +21,7 @@
 		<javax.el.version>2.2.4</javax.el.version>
 		<mybatis-plus.version>2.3.1</mybatis-plus.version>
 		<druid.version>1.1.10</druid.version>
-		<mysql.version>5.1.18</mysql.version>
+		<ojdbc8.version>1.0</ojdbc8.version>
 		<httpClient.version>4.5.3</httpClient.version>
 		<httpasyncclient.version>4.1.3</httpasyncclient.version>
 	</properties>
@@ -130,11 +130,10 @@
 			<artifactId>mybatis-plus</artifactId>
 			<version>${mybatis-plus.version}</version>
 		</dependency>
-		<!-- mysql -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.version}</version>
+			<groupId>oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>${ojdbc8.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
