--- a/sms-migration/src/main/resources/config/dev/database-dev.properties
+++ b/sms-migration/src/main/resources/config/dev/database-dev.properties
@@ -1,4 +1,4 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/sms?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-db.user=root
-db.password=root
+db.driver=oracle.jdbc.OracleDriver
+db.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+db.user=scott
+db.password=tiger
