--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<modules>
 		<module>sms-gateway-api</module>
 		<module>sms-gateway-service</module>
+		<module>sms-channel-api</module>
+		<module>sms-channel-service</module>
 		<module>sms-gateway-web</module>
 		<module>sms-migration</module>
 	</modules>
